Bug 1394586: Unconditionally clear the restyle flags on Element::BindToTree. r=bholley

The failure here is a <script> that document.writes a whole HTML document, which
happens to have the Gecko style back-end.

Of all the elements written there, there's an <img> element which triggers a
load, which finishes and changes the state of the <img>, posting a restyle event
to its Gecko-backed restyle manager.

At that point, but before the refresh driver ticks, the element is unbound from
the tree, keeping the restyle root bits from the Gecko back-end.

Afterwards, the element is bound to a Servo-backed document, so
ClearRestyleFlagsIfGecko does nothing (since the document pointer is already
set, and points to a Servo-backed document).

Furthermore, it's inserted on a display: none subtree, so we never reach it
during the traversal to remove the flags.

Other alternative fixes for this same issue would be:

 * Clearing the Gecko restyle flags in UnbindFromTree. Gecko doesn't seem to
   prevent restyle roots from being outside of the document (it just does
   nothing when finding them on ProcessPendingRestyles), so it doesn't seem a
   very reliable solution.

 * Reorder the flag clearing to be before setting the document in BindToTree.
   Seems somewhat risky, and for no good reason.

MozReview-Commit-ID: B6iZKhGHc3A